Salesforce CPQ/main/default/objects/PriceAction__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TargetObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Discount (%)</fullName>
            </value>
            <value>
                <fullName>Discount (Amt)</fullName>
            </value>
            <value>
                <fullName>Markup (%)</fullName>
            </value>
            <value>
                <fullName>Markup (Amt)</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
                <label>Target (%)</label>
            </value>
            <value>
                <fullName>Norm</fullName>
                <label>Norm (%)</label>
            </value>
            <value>
                <fullName>Floor</fullName>
                <label>Floor (%)</label>
            </value>
            <value>
                <fullName>Explanation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>