Salesforce CPQ/main/default/objects/PriceAction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Number which determines the order in which multiple actions on a rule are executed.</description>
    <inlineHelpText>Number which determines the order in which multiple actions on a rule are executed.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>