Salesforce CPQ/main/default/objects/PriceAction__c/fields/RuleLookupObject__c.field-meta.xml
<CustomField>
    <fullName>RuleLookupObject__c</fullName>
    <formula>TEXT(Rule__r.LookupObject__c)</formula>
    <label>Rule Lookup Object</label>
    <type>Text</type>
</CustomField>