Salesforce CPQ/main/default/objects/PriceAction__c/fields/SourceVariable__c.field-meta.xml
<CustomField>
    <fullName>SourceVariable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Summary variable that sources value for this action.</description>
    <inlineHelpText>Summary variable that sources value for this action.</inlineHelpText>
    <label>Source Variable</label>
    <referenceTo>SummaryVariable__c</referenceTo>
    <relationshipLabel>Price Actions (Source)</relationshipLabel>
    <relationshipName>SourcePriceActions</relationshipName>
    <type>Lookup</type>
</CustomField>