Salesforce CPQ/main/default/objects/PriceAction__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <inlineHelpText>Use Quote, Quote Line or Quote Line Pricing Guidance when Price Rule Evaluation Scope is Calculation. Use Product Option when Price Rule Evaluation Scope is Configuration.</inlineHelpText>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Quote Line</fullName>
            </value>
            <value>
                <fullName>Product Option</fullName>
            </value>
            <value>
                <fullName>Quote Line Pricing Guidance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>