Salesforce CPQ/main/default/objects/PriceAction__c/validationRules/Event_Evaluation_Pricing_Guidance.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Evaluation_Pricing_Guidance</fullName>
    <active>true</active>
    <description>Prevents users from creating Price Actions related to Pricing Guidance if the evaluation event is not After Calculate.</description>
    <errorConditionFormula>ISPICKVAL(TargetObject__c, &apos;Quote Line Pricing Guidance&apos;) &amp;&amp; (INCLUDES(Rule__r.EvaluationEvent__c, &apos;On Initialization&apos;) || INCLUDES(Rule__r.EvaluationEvent__c, &apos;Before Calculate&apos;) || INCLUDES(Rule__r.EvaluationEvent__c, &apos;On Calculate&apos;))</errorConditionFormula>
    <errorDisplayField>TargetObject__c</errorDisplayField>
    <errorMessage>To use Quote Line Pricing Guidance as the Target Object, select After Calculate from the Calculator Evaluation Event dropdown list.</errorMessage>
</ValidationRule>